[tool.poetry]
name = "mush-import"
version = "0.1.0"
description = ""
authors = ["Charles-Meldhine Madi Mnemoi <icdk5b4zf@relay.firefox.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
streamlit = "^1.28.0"
pydantic = "^2.4.2"
beautifulsoup4 = "^4.12.2"
google-cloud-bigquery = "^3.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
